with editing update

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 } */
+
+/* .w-tc-editor-text {
+  border: 1px solid black !important;
+}
+
+.w-tc-editor-text:hover {
+  border: 1px solid black !important;
+  background-color: lightcyan !important;
+}
+
+.language-js:hover {
+  background-color: lightpink;
+} */
